# CS171-Stable-Fluids

./: .clang-format  .gitignore  CMakeLists.txt  README.md  fluid.cpp  fluid.cu  fluid.cuh  fluid.h  fluidSimulator.cpp  fluidSimulator.h  gl.cu  main.cpp  main.cu  params.h  solver.cpp  solver.h  vcpkg.json
kernels/: render.cu  render.cuh  solver.cu  solver.cuh  utils.cu  utils.cuh
